added more tone

--- a/index.html
+++ b/index.html
@@ -21,6 +21,30 @@
         <option value="romantic">😍 Romantic</option>
         <option value="savage">😎 Savage</option>
         <option value="professional">💼 Professional</option>
+        <option value="friendly">👋 Friendly</option>
+        <option value="cute">🐶 Cute</option>
+        <option value="motivational">💪 Motivational</option>
+        <option value="informative">📚 Informative</option>
+        <option value="casual">🌿 Casual</option>
+        <option value="witty">🧠 Witty</option>
+        <option value="poetic">🎭 Poetic</option>
+        <option value="adventurous">🏔️ Adventurous</option>
+        <option value="nostalgic">📸 Nostalgic</option>
+        <option value="playful">🎉 Playful</option>
+        <option value="confident">✨ Confident</option>
+        <option value="sassy">💅 Sassy</option>
+        <option value="uplifting">🌈 Uplifting</option>
+        <option value="chill">😌 Chill</option>
+        <option value="edgy">⚡ Edgy</option>
+        <option value="whimsical">🦄 Whimsical</option>
+        <option value="thoughtful">🤔 Thoughtful</option>
+        <option value="bold">🔥 Bold</option>
+        <option value="sarcastic">🙃 Sarcastic</option>
+        <option value="elegant">🌸 Elegant</option>
+        <option value="quirky">🎈 Quirky</option>
+        <option value="dramatic">🎬 Dramatic</option>
+        <option value="smart">🧠 Smart</option>
+        <option value="weird-core">👽 Weird-core</option>
       </select>
       <button type="submit" id="submitBtn" class="w-full bg-blue-600 hover:bg-blue-700 dark:bg-blue-500 dark:hover:bg-blue-600 text-white p-3 rounded flex justify-center items-center space-x-2 transition">
         <span id="btnText">Generate Captions</span>
